styles.css
/* Top Section - Start */
#topSection {
  width: 1028px;
  height: 532px;
  flex: none;
  order: 0;
  flex-grow: 0;
  position: relative;
}

.top-section-content {
  padding: 10px 30px;
}

.top-section-content * {
  z-index: 50;
}

.top-nav { 
  display: flex; 
  font-size: var(--size-14);
  margin-top: var(--size-20);
}

.project-logo-container {
  width: 9.938rem;
}

.top-section-content ul {
  display: flex;
  align-items: center;
  gap: 20px;
  margin-left: auto;
  margin-right: 29px;
  color: var(--base-font);
}

.topnav-btn {
  margin-right: 15px;
  width: 107px;
  border: 1px solid transparent;
}

.hero-section {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 40px 30px 0px;
  gap: 10px;
  width: 1024px;
  height: 446px;
}

.left-part {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding: 0px 0px 60px;
  gap: 30px;
  width: 477px;
  height: 406px;
}

.title {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0px;
  gap: 11px;
  width: 334px;
  height: 172px;
}

.title span {
  width: 334px;
  height: 144px;
  font-style: normal;
  font-weight: 500;
  font-size: 40px;
  line-height: 48px;
}

.title p {
  width: 334px;
  height: 17px;
  font-style: normal;
  font-weight: 500;
  font-size: var(--size-14);
  line-height: 17px;
  color: var(--base-font);
}

.actions {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 24px;
  width: 477px;
  height: 48px;
}

.actions > a {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 8px;
  width: 137px;
  height: 48px;
  border-radius: 30px;
}

.actions > a > button {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 15px 25px;
  gap: 8px;
  width: 137px;
  cursor: pointer;
}

.actions > a > button > i {
  width: var(--size-18);
  height: var(--size-18);
  font-style: normal;
  font-weight: 900;
  font-size: var(--size-18);
  line-height: var(--size-18);
}

.actions > a > button > span {
  width: 61px;
  height: 15px;
  font-weight: 500;
  line-height: 15px;
}

.features-link {
  height: 17px;
  font-weight: 700;
  font-size: var(--size-14);
  line-height: 17px;
  color: var(--blue);
}

.right-part {
  width: 477px;
  height: 406px;
  position: relative;
}

.lg-logo-container {
  width: 80px;
  background: var(--white);
  box-shadow: 0px 3px 13px rgba(0, 0, 0, 0.25);
  border-radius: 40px;  
  z-index: 75;

  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 16px;
}

.sm-logo-container {
  width: 60px;
  background: #FFFFFF;
  box-shadow: 0px 3px 13px rgba(0, 0, 0, 0.25);
  border-radius: 30px;
  z-index: 75;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 10px;
}

.asana-icon {
  position: absolute;
  width: 80px;
  height: 80px;
  left: 380px;
  top: 10px;
}

.calendar-icon {
  position: absolute;
  width: 80px;
  height: 80px;
  left: 364px;
  top: 310px;
}

.weave-icon {
  position: absolute;
  width: 80px;
  height: 80px;
  left: 262px;
  top: 172px;
}

.paypal-icon {
  position: absolute;
  width: 80px;
  height: 80px;
  left: 44px;
  top: 172px;
}

.attlasian-icon {
  position: absolute;
  width: 80px;
  height: 80px;
  left: 175px;
  top: 10px;
}

.google-ads-icon {
  position: absolute;
  width: 60px;
  height: 60px;
  left: 155px;
  top: 290px;
}

.google-icon {
  position: absolute;
  width: 60px;
  height: 60px;
  left: 64px;
  top: 10px;
}

.top-section-bg {
  position: absolute;
  width: 1023.5px;
  height: 517px;
  left: 0.5px;
  top: -1px;
  z-index: 0;
}

.vector-2 {
  position: absolute;
  width: 316px;
  height: 443px;
  left: 711.5px;
  top: 0px;
  background: #E1E7EF;
}

.vector-1 {
  position: absolute;
  width: 884.5px;
  height: 517px;
  left: 0px;
  top: 0px;

  background:
  linear-gradient(312.73deg,
  rgba(217, 217, 217, 0.44) 17.61%,
  rgba(217, 217, 217, 0) 55.85%);
}
/* Top Section - End */

/* Key Benefits Section - Start */
#keyBenefitsSection {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 120px 0px 80px;
  gap: 60px;
  width: 1024px;
  height: 655px;
}

.benefits-title {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0px;
  gap: 10px;
  width: 434px;
  height: 65px;
}

.key-benefits {
  width: 160px;
  height: 31px;

  font-style: normal;
  font-weight: 700;
  font-size: 26px;
  line-height: 31px;
  text-align: center;
}

.benefit-list {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  padding: 10px 30px;
  gap: 30px;
  width: 1024px;
  height: 330px;
}

.benefits-paragraph {
  width: 434px;
  height: 24px;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  text-align: center;
  color: var(--base-font);
}

.benefit-list {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start;
  padding: 10px 30px;
  gap: 30px;
  width: 1024px;
  height: 330px;
}

.benefit-item {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 20px;
  gap: 20px;
  width: 218.5px;
  height: 310px;
  background: (var--white);
  border: 1px solid var(--white);
  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
}

.item-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0px;
  gap: 20px;
  width: 178.5px;
  height: 270px;
}

.responsive-1, .components {
  width: 50px;
  height: 50px;
}

.card-title {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0px;
  gap: 10px;
  width: 91px;
  height: 23px;
}

.card-title span {
  width: 91px;
  height: 19px;
  font-style: normal;
  font-weight: 700;
  font-size: 16px;
  line-height: 19px;
}

.title-with-icon {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0px;
  gap: 10px;
  width: 140px;
  height: 23px;
}
/* ... */

